Modify jenkinsfile to update and upgrade packages to prevent vulnerabilities

--- a/10-jre/Dockerfile
+++ b/10-jre/Dockerfile
@@ -4,6 +4,11 @@ MAINTAINER Raúl Cruz
 # Create user java:java
 RUN addgroup -S java && adduser -S -G java java
 
+# Update and upgrade packages
+RUN apk update && \
+    apk upgrade && \
+    rm -rf /var/cache/apk/*
+
 # Add entrypoint.sh to allow correct execution on PID 1
 ADD entrypoint.sh /home/java/entrypoint.sh
 
